--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -199,6 +199,7 @@
     <Content Include="Areas\Business\Css\images\BZZX\bzzx_sy_xxwffb_jp.png" />
     <Content Include="Areas\Business\Css\images\BZZX\bzzx_sy_xxbsc_fhdb.png" />
     <Content Include="Areas\Business\Css\images\BZZX\bzzx_fhdb.png" />
+    <Content Include="Areas\Business\Css\images\BZZX\bzzx_wzyj_sctp.png" />
     <Content Include="Areas\Business\Css\images\cellphone.png" />
     <Content Include="Areas\Business\Css\images\clip.png" />
     <Content Include="Areas\Business\Css\images\close.png" />
