--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -60,7 +60,7 @@
     <Compile Include="Maps\JCXX_Map.cs" />
     <Compile Include="Maps\PHOTOS_Map.cs" />
     <Compile Include="Maps\SZMX_Map.cs" />
-    <Compile Include="Maps\WZYJ_Map.cs" />
+    <Compile Include="Maps\WZJY_Map.cs" />
     <Compile Include="Maps\XQJBXX_Map.cs" />
     <Compile Include="Maps\XXLB_Map.cs" />
     <Compile Include="Maps\YHJBXX_Map.cs" />
