--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -50,6 +50,7 @@
     <Compile Include="IBZZXBLL.cs" />
     <Compile Include="ICommonBLL.cs" />
     <Compile Include="IDAO.cs" />
+    <Compile Include="IFC_DZFBLL.cs" />
     <Compile Include="IFWCZJBXXBLL.cs" />
     <Compile Include="IHFCZBLL.cs" />
     <Compile Include="ILBXXBLL.cs" />
