--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -157,7 +157,8 @@
     <Content Include="Areas\Business\Css\BZZX\BZZX_SY_ZHMM.css" />
     <Content Include="Areas\Business\Css\BZZX\BZZX_WZJY.css" />
     <Content Include="Areas\Business\Css\FBCG.css" />
-    <Content Include="Areas\Business\Css\FWCZ.css" />
+    <Content Include="Areas\Business\Css\FC\FC_DZF.css" />
+    <Content Include="Areas\Business\Css\FC\FC_FW.css" />
     <Content Include="Areas\Business\Css\GRZL\GRZL.css" />
     <Content Include="Areas\Business\Css\GRZL\MMSZ.css" />
     <Content Include="Areas\Business\Css\HBSJ.css" />
@@ -330,10 +331,13 @@
     <Content Include="Areas\Business\Scripts\Business\BZZX\BZZX_WZJYZP.js" />
     <Content Include="Areas\Business\Scripts\Business\Common\Common.js" />
     <Content Include="Areas\Business\Scripts\Business\Common\Regular.js" />
+    <Content Include="Areas\Business\Scripts\Business\FC\FC_DZF.js" />
+    <Content Include="Areas\Business\Scripts\Business\FC\FC_DZFYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\FC\FC_DZFZP.js" />
     <Content Include="Areas\Business\Scripts\Business\FWCG\FWCG.js" />
-    <Content Include="Areas\Business\Scripts\Business\FWCZ\FWCZ.js" />
-    <Content Include="Areas\Business\Scripts\Business\FWCZ\FWCZYZ.js" />
-    <Content Include="Areas\Business\Scripts\Business\FWCZ\FWCZZP.js" />
+    <Content Include="Areas\Business\Scripts\Business\FC\FC_FW.js" />
+    <Content Include="Areas\Business\Scripts\Business\FC\FC_FWYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\FC\FC_FWZP.js" />
     <Content Include="Areas\Business\Scripts\Business\GRZL\GRZL.js" />
     <Content Include="Areas\Business\Scripts\Business\GRZL\MMSZ.js" />
     <Content Include="Areas\Business\Scripts\Business\HBSJ.js" />
@@ -414,7 +418,8 @@
     <Compile Include="Areas\Business\Controllers\BZZX\WZYJController.cs" />
     <Compile Include="Areas\Business\Controllers\CommonController.cs" />
     <Compile Include="Areas\Business\Controllers\FBCGController.cs" />
-    <Compile Include="Areas\Business\Controllers\FC\FC_FWCZController.cs" />
+    <Compile Include="Areas\Business\Controllers\FC\FC_DZFController.cs" />
+    <Compile Include="Areas\Business\Controllers\FC\FC_FWController.cs" />
     <Compile Include="Areas\Business\Controllers\GRZLController.cs" />
     <Compile Include="Areas\Business\Controllers\HFCZController.cs" />
     <Compile Include="Areas\Business\Controllers\LBXZController.cs" />
@@ -460,7 +465,7 @@
     <Content Include="Areas\Business\Views\ZHMM\ZHMM.cshtml" />
     <Content Include="Areas\Business\Views\WDFB\WDFB.cshtml" />
     <Content Include="Areas\Business\Views\LBXZ\LBXZ.cshtml" />
-    <Content Include="Areas\Business\Views\FC_FWCZ\FC_FWCZ.cshtml" />
+    <Content Include="Areas\Business\Views\FC_FW\FC_FW.cshtml" />
     <Content Include="Areas\Business\Scripts\jquery-ui-1.12.1.custom\package.json" />
     <Content Include="Areas\Business\Scripts\jquery-ui-1.12.1.custom\jquery.ui.datepicker-zh-CN.js" />
     <Content Include="Areas\Business\Ashx\SavePhotos.ashx" />
@@ -505,6 +510,7 @@
     <Content Include="Areas\Business\Views\BZZX\BZZX_SY_KSDH_ZHDJYXY.cshtml" />
     <Content Include="Areas\Business\Views\BZZX\BZZX_SY_KSDH_WLFPCS.cshtml" />
     <Content Include="Areas\Business\Views\BZZX\BZZX_SY_KSDH_YYPJKD.cshtml" />
+    <Content Include="Areas\Business\Views\FC_DZF\FC_DZF.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
