--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -55,6 +55,7 @@
     <Compile Include="BLL\BZZXBLL.cs" />
     <Compile Include="BLL\CommonBLL.cs" />
     <Compile Include="BLL\FC_DZFBLL.cs" />
+    <Compile Include="BLL\FC_SPBLL.cs" />
     <Compile Include="BLL\FWCZJBXXBLL.cs" />
     <Compile Include="BLL\HFCZBLL.cs" />
     <Compile Include="BLL\LBXXBLL.cs" />
